Fixed bunch of styling bugs on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -22,6 +22,7 @@ a {
 
 .w3-main {
     margin-left: 205px;
+    margin-top: 100px;
 }
 
 .profile-picture {
@@ -47,9 +48,20 @@ a {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
     width: 100%;
     text-align: center;
 }
+
+#main-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.w3-sidenav {
+    margin-top: -26px;
+}
+
